cleaned up using CSS and added spacing

--- a/rose-wan/src/App.css
+++ b/rose-wan/src/App.css
@@ -26,3 +26,12 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.input-field, .submit-button {
+  margin-left: 10px;
+  margin-bottom: 30px;
+}
+
+.display-name, .display-image {
+  margin: 20px 0 10px 0;
+}
