--- a/rose-wan/src/App.css
+++ b/rose-wan/src/App.css
@@ -1,13 +1,43 @@
 .App {
   text-align: center;
+  top: 30%;
 }
 
 
 .input-field, .submit-button {
   margin-left: 10px;
   margin-bottom: 30px;
+  font-size: 20px;
+}
+
+.input-field {
+  width: 30%;
 }
 
 .display-name, .display-image {
-  margin: 20px 0 10px 0;
+  margin: 10px 0 10px 0;
+  font-size: 30px;
+}
+
+.display-image {
+  width: 250px;
+}
+
+.header  {
+  color: red;
+  font-size: 45px;
+}
+
+.header2 {
+  font-size: 35px;
+}
+
+
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+}
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
