fixed an error when after searching for a pokemon and the next search is blank, the list appears without the last pokemon showing

--- a/rose-wan/src/App.css
+++ b/rose-wan/src/App.css
@@ -3,6 +3,14 @@
   top: 30%;
 }
 
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+body {
+  background: #ecf0f1;
+}
 
 .input-field, .submit-button {
   margin-left: 10px;
@@ -37,6 +45,9 @@ ul li {
   list-style:none;
 }
 
+
+
+/* POKEBALL LOADING SYMBOL STYLING */
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
